syntax = "proto3";

package serialization;

import "graph.proto";

message RouterSettings {
  int32 bus_wait_time = 1;
  double bus_velocity = 2;
}

message StopId {
  bytes name = 1;
  int32 id = 2;
}

message Router {
  RouterSettings router_settings = 1;
  Graph graph = 2;
  repeated StopId stop_id = 3;
}